fixed the wrapping bug

--- a/src/com/nav-bar/bar.less
+++ b/src/com/nav-bar/bar.less
@@ -88,7 +88,7 @@
 					color: @MAJOR_LIGHT;
 				}
 				&:hover:active {
-					color: @MAJOR_COLOR2;
+					color: @MAJOR_COLOR1;
 					background: @MAJOR_LIGHT;
 				}
 			}
