--- a/src/com/sidebar-shortlist/shortlist.less
+++ b/src/com/sidebar-shortlist/shortlist.less
@@ -44,6 +44,7 @@
 	& a, & a:visited {
 		color: @MAJOR_COLOR3;
 		
+		white-space: nowrap;
 		text-decoration: none;
 /*		padding: .1em .15em 0;
 		border-radius: .05em;
