--- a/src/com/sidebar-tv/tv.less
+++ b/src/com/sidebar-tv/tv.less
@@ -43,7 +43,7 @@
 			bottom:1em;
 
 			padding:0.05em 0.5em;
-			background:rgba(100,65,165,0.7);
+			background:rgba(100,65,165,0.8);
 
 			color:white;
 		}
@@ -53,7 +53,7 @@
 			top:1em;
 			
 			padding:0.05em 0.5em;
-			background:rgba(0,0,0,0.5);
+			background:rgba(0,0,0,0.7);
 
 			color: white;
 		}
